--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <!-- Favicon -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚙️</text></svg>">
 
-    <!-- Chart.js - Funciona offline após primeiro carregamento -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js" crossorigin="anonymous"></script>
-
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body {
@@ -102,6 +99,37 @@
         .status-pausada { background: rgba(251,191,36,0.3); color: #fde047; }
         .status-concluida { background: rgba(16,185,129,0.3); color: #6ee7b7; }
         .status-cancelada { background: rgba(239,68,68,0.3); color: #fca5a5; }
+        
+        /* Gráfico personalizado */
+        .chart-container {
+            position: relative;
+            width: 100%;
+            max-width: 400px;
+            margin: 0 auto;
+        }
+        .donut-chart {
+            width: 100%;
+            height: auto;
+        }
+        .chart-legend {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+            margin-top: 1.5rem;
+            flex-wrap: wrap;
+        }
+        .legend-item {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            color: white;
+            font-size: 0.9rem;
+        }
+        .legend-color {
+            width: 20px;
+            height: 20px;
+            border-radius: 4px;
+        }
     </style>
 </head>
 <body>
@@ -200,7 +228,23 @@
         <!-- Gráfico -->
         <div class="card">
             <h2>📊 Gráfico de Apontamento (%)</h2>
-            <canvas id="graficoApontamento" style="max-height:300px;"></canvas>
+            <div class="chart-container">
+                <svg class="donut-chart" viewBox="0 0 200 200" id="graficoApontamento">
+                    <circle cx="100" cy="100" r="80" fill="none" stroke="#10b981" stroke-width="40" stroke-dasharray="0 502.4" transform="rotate(-90 100 100)" id="circleCom"/>
+                    <circle cx="100" cy="100" r="80" fill="none" stroke="#ef4444" stroke-width="40" stroke-dasharray="502.4 502.4" transform="rotate(-90 100 100)" id="circleSem"/>
+                    <text x="100" y="100" text-anchor="middle" dy="0.3em" fill="white" font-size="32" font-weight="bold" id="percentText">0%</text>
+                </svg>
+                <div class="chart-legend">
+                    <div class="legend-item">
+                        <div class="legend-color" style="background: #10b981;"></div>
+                        <span>Dias com OS</span>
+                    </div>
+                    <div class="legend-item">
+                        <div class="legend-color" style="background: #ef4444;"></div>
+                        <span>Dias sem OS</span>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!-- Lista -->
@@ -213,7 +257,6 @@
     <script>
         let orders = [];
         let editingId = null;
-        let grafico = null;
 
         // Carrega as ordens do localStorage
         function loadOrders() {
@@ -390,10 +433,7 @@
             if (!mesSelecionado) {
                 renderOrders();
                 document.getElementById('diasSemOs').innerHTML = '<li>Selecione um mês para visualizar</li>';
-                if (grafico) {
-                    grafico.destroy();
-                    grafico = null;
-                }
+                atualizarGrafico(0);
                 return;
             }
 
@@ -442,8 +482,15 @@
             }
         }
 
-        // GRÁFICO
+        // GRÁFICO SVG (100% Offline)
         function atualizarGrafico(ano, mes) {
+            if (!ano || !mes) {
+                document.getElementById('percentText').textContent = '0%';
+                document.getElementById('circleCom').setAttribute('stroke-dasharray', '0 502.4');
+                document.getElementById('circleSem').setAttribute('stroke-dasharray', '502.4 502.4');
+                return;
+            }
+
             const totalDias = new Date(ano, mes, 0).getDate();
             const diasCom = orders.filter(o => {
                 const d = new Date(o.data + 'T00:00:00');
@@ -451,50 +498,23 @@
             }).length;
 
             const porcent = Math.round((diasCom / totalDias) * 100);
+            const circumference = 502.4; // 2 * Math.PI * 80
+            const comLength = (porcent / 100) * circumference;
+            const semLength = circumference - comLength;
 
-            const ctx = document.getElementById('graficoApontamento');
-            if (grafico) {
-                grafico.destroy();
-            }
-
-            grafico = new Chart(ctx, {
-                type: 'doughnut',
-                data: {
-                    labels: ['Dias com OS', 'Dias sem OS'],
-                    datasets: [{
-                        data: [porcent, 100 - porcent],
-                        backgroundColor: ['rgba(16,185,129,0.8)', 'rgba(239,68,68,0.8)'],
-                        borderColor: ['rgba(16,185,129,1)', 'rgba(239,68,68,1)'],
-                        borderWidth: 2
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    maintainAspectRatio: true,
-                    plugins: {
-                        legend: {
-                            labels: {
-                                color: '#fff',
-                                font: { size: 14 }
-                            }
-                        },
-                        tooltip: {
-                            callbacks: {
-                                label: function (context) {
-                                    return context.label + ': ' + context.parsed + '%';
-                                }
-                            }
-                        }
-                    }
-                }
-            });
+            document.getElementById('percentText').textContent = porcent + '%';
+            document.getElementById('circleCom').setAttribute('stroke-dasharray', `${comLength} ${circumference}`);
+            document.getElementById('circleSem').setAttribute('stroke-dasharray', `${semLength} ${circumference}`);
+            document.getElementById('circleSem').setAttribute('stroke-dashoffset', -comLength);
         }
 
         // Inicializa o sistema
         loadOrders();
 
         // Define data de hoje como padrão
-        document.getElementById('data').valueAsDate = new Date();
+        const hoje = new Date();
+        const dataInput = document.getElementById('data');
+        dataInput.valueAsDate = hoje;
     </script>
 </body>
 </html>
